--- a/DailyPlannerService/src/main/resources/application.properties
+++ b/DailyPlannerService/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
+spring.main.allow-bean-definition-overriding=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nikitajawali99@gmail.com
+spring.mail.password=rrai usmh clvs fwqu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
