--- a/DailyPlannerService/src/main/resources/application.properties
+++ b/DailyPlannerService/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.main.allow-bean-definition-overriding=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=nikitajawali99@gmail.com
-spring.mail.password=rrai usmh clvs fwqu
+spring.mail.username=dailyplannerapplication23@gmail.com
+spring.mail.password=wgij tzmm ivps kfwx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
